[package]
name = "rust_arc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rutie = { git = "https://github.com/yfractal/rutie.git", branch = "master"}
lazy_static = "1.4.0"

[lib]
name = "ruby_example"
crate-type = ["dylib"]